<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8ssp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_title"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/retrieve_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <EditText
            android:id="@+id/inputDialogEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:drawableTint="@color/drawable_tint"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_background">

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_button"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/btUpdate"
                app:layout_constraintEnd_toStartOf="@+id/btUpdate"
                app:layout_constraintTop_toTopOf="@+id/btUpdate" />

            <Button
                android:id="@+id/btUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/background_button"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:text="@string/agree"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>