<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.SignInActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_36ssp"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_380sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/inputEmailSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_92sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:autofillHints="emailAddress"
            android:background="@drawable/background_edittext"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="@dimen/_4sdp"
            android:drawableTint="@color/drawable_tint"
            android:ellipsize="end"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_edittext"
            android:drawablePadding="@dimen/_4sdp"
            android:ellipsize="end"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_password"
            app:drawableTint="@color/drawable_tint"
            app:layout_constraintEnd_toEndOf="@+id/inputEmailSignIn"
            app:layout_constraintStart_toStartOf="@+id/inputEmailSignIn"
            app:layout_constraintTop_toBottomOf="@+id/inputEmailSignIn"
            tools:ignore="TextViewEdits" />

        <ImageView
            android:id="@+id/imgShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/inputPassword"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintTop_toTopOf="@+id/inputPassword"
            app:srcCompat="@drawable/ic_close_eye"
            app:tint="@color/drawable_tint"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            tools:ignore="MissingConstraints,TextContrastCheck,TextContrastCheck" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btLogin"
            app:layout_constraintEnd_toEndOf="@+id/btLogin"
            app:layout_constraintStart_toStartOf="@+id/btLogin"
            app:layout_constraintTop_toTopOf="@+id/btLogin" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/forget_password"
            android:textColor="@color/drawable_tint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLogin"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassword">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/m2"
                android:backgroundTint="@color/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="@dimen/_24sdp"
                android:paddingEnd="@dimen/_24sdp"
                android:text="@string/or"
                android:textColor="@color/drawable_tint"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/m2"
                android:backgroundTint="@color/line" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button1"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_google"
            android:fontFamily="@font/roboto_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/google"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/loginToSignUp"
        android:textColor="@color/drawable_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>