<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8ssp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_title"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/internet_connection"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:importantForAutofill="no"
            android:padding="12dp"
            android:text="Connect to the internet to proceed further"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            tools:ignore="HardcodedText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_background">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_button"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/connection"
                app:layout_constraintEnd_toStartOf="@+id/connection"
                app:layout_constraintTop_toTopOf="@+id/connection" />

            <Button
                android:id="@+id/connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/background_button"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:text="@string/connection"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>