<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:src="@drawable/ic_back"
                android:tint="@color/black"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/update_information"
                android:textColor="@color/m1"
                android:textSize="@dimen/_24sdp"
                app:layout_constraintBottom_toBottomOf="@+id/back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="@+id/back" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4ssp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/txtAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/add_image"
                android:textSize="@dimen/_10sdp" />
        </FrameLayout>

        <EditText
            android:id="@+id/updateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/background_search"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableTint="@color/drawable_tint"
            android:fontFamily="@font/roboto_regular"
            android:hint="Name"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/_8sdp"
            tools:ignore="HardcodedText,UnusedAttribute" />

        <EditText
            android:id="@+id/updateNumberPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/background_search"
            android:drawableStart="@drawable/ic_number_phone"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableTint="@color/drawable_tint"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/phone_number"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="@dimen/_8sdp"
            tools:ignore="TextFields,UnusedAttribute" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/dialog_background">

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_button"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="@dimen/_25sdp"
                android:paddingEnd="@dimen/_25sdp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="@+id/btUpdate"
                app:layout_constraintEnd_toStartOf="@+id/btUpdate"
                app:layout_constraintTop_toTopOf="@+id/btUpdate" />

            <Button
                android:id="@+id/btUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/background_button"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="@dimen/_25sdp"
                android:paddingEnd="@dimen/_25sdp"
                android:text="@string/update"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>